--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ beautifulsoup4 = "^4.11.1"
 pyyaml = "^6.0"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
+lark = "^1.1.5"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
