--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ pyyaml = "^6.0"
 
 
 [tool.poetry.group.dev.dependencies]
+
+
+[tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
 lark = "^1.1.5"
 
