--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,12 +15,10 @@ beautifulsoup4 = "^4.11.1"
 pyyaml = "^6.0"
 
 
-[tool.poetry.group.dev.dependencies]
-
-
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
 lark = "^1.1.5"
+pytest-asyncio = "^0.20.3"
 
 [build-system]
 requires = ["poetry-core"]
