--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ python = "^3.10"
 python-dotenv = "^0.21.0"
 beautifulsoup4 = "^4.11.1"
 pyyaml = "^6.0"
+tmdbsimple = "^2.9.1"
+html2image = "^2.0.1"
 
 
 [tool.poetry.group.test.dependencies]
