--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ beautifulsoup4 = "^4.11.1"
 pyyaml = "^6.0"
 tmdbsimple = "^2.9.1"
 html2image = "^2.0.1"
+pre-commit = "^2.21.0"
 
 
 [tool.poetry.group.test.dependencies]
