--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pyyaml = "^6.0"
 tmdbsimple = "^2.9.1"
 html2image = "^2.0.1"
 pre-commit = "^2.21.0"
+apscheduler = "^3.9.1.post1"
 
 
 [tool.poetry.group.test.dependencies]
