--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ beautifulsoup4 = "^4.11.1"
 pyyaml = "^6.0"
 tmdbsimple = "^2.9.1"
 html2image = "^2.0.1"
-pre-commit = "^2.21.0"
 apscheduler = "^3.9.1.post1"
 
 
@@ -23,6 +22,15 @@ apscheduler = "^3.9.1.post1"
 pytest = "^7.2.0"
 lark = "^1.1.5"
 pytest-asyncio = "^0.20.3"
+
+
+[tool.poetry.group.dev.dependencies]
+taskipy = "^1.10.3"
+pre-commit = "^3.0.0"
+
+[tool.taskipy.tasks]
+start = "python movie_bet_bot"
+test = "pytest"
 
 [build-system]
 requires = ["poetry-core"]
