--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,10 +23,30 @@ repos:
   - repo: https://github.com/pycqa/flake8
     rev: 6.0.0
     hooks:
-    -   id: flake8
+      - id: flake8
 
   - repo: https://github.com/python-poetry/poetry
     rev: 1.3.2
     hooks:
       - id: poetry-check
       - id: poetry-lock
+
+  - repo: local
+    hooks:
+      - id: test
+        name: test
+        entry: poetry run task test
+        language: system
+        pass_filenames: false
+        stages:
+          - push
+
+  - repo: local
+    hooks:
+      - id: coverage-badge
+        name: coverage-badge
+        entry: poetry run task coverage-badge
+        language: system
+        pass_filenames: false
+        stages:
+          - push
