--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,11 +19,17 @@ tmdbsimple = "^2.9.1"
 html2image = "^2.0.1"
 apscheduler = "^3.9.1.post1"
 
+[tool.poetry.group.test]
+optional = true
+
 [tool.poetry.group.test.dependencies]
 lark = "^1.1.5"
 pytest-asyncio = "^0.20.3"
 pytest-cov = "^4.0.0"
 coverage = "^7.1.0"
+
+[tool.poetry.group.dev]
+optional = true
 
 [tool.poetry.group.dev.dependencies]
 taskipy = "^1.10.3"
