--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ pyyaml = "^6.0"
 tmdbsimple = "^2.9.1"
 html2image = "^2.0.1"
 apscheduler = "^3.9.1.post1"
+taskipy = "^1.10.3"
+
+[tool.poetry.group.test]
+optional = true
 
 [tool.poetry.group.test.dependencies]
 lark = "^1.1.5"
@@ -25,8 +29,10 @@ pytest-asyncio = "^0.20.3"
 pytest-cov = "^4.0.0"
 coverage = "^7.1.0"
 
+[tool.poetry.group.dev]
+optional = true
+
 [tool.poetry.group.dev.dependencies]
-taskipy = "^1.10.3"
 pre-commit = "^3.0.0"
 coverage-badge = "^1.1.0"
 
