--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ tmdbsimple = "^2.9.1"
 html2image = "^2.0.2"
 apscheduler = "^3.9.1.post1"
 taskipy = "^1.10.3"
+numpy = "^1.26.2"
+matplotlib = "^3.8.2"
 
 [tool.poetry.group.test]
 optional = true
